# omni-translate-app

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: asr_bridge.py  asr_pc_export.py  config.py  image_translation_bridge.py  live_metrics.py  live_settings.py  main.py  protocol.py  router.py  routes.py  runtime.py  sessions.py  translation_bridge.py  tts_bridge.py  voice_library.py
config/: settings.json
config/voice_reference_texts/: af.txt  ar.txt  bg.txt  bn.txt  cs.txt  da.txt  de.txt  el.txt  en-gb.txt  en.txt  es.txt  fa.txt  fi.txt  fr.txt  he.txt  hi.txt  hr.txt  hu.txt  id.txt  it.txt  ja.txt  ko.txt  ms.txt  nb.txt  nl.txt  pl.txt  pt-br.txt  pt-pt.txt  ro.txt  ru.txt  sk.txt  sv.txt  sw.txt  ta.txt  th.txt  tl.txt  tr.txt  uk.txt  ur.txt  vi.txt  (+1 more)
docs/: backlog.md  bubble-segmentation-design.md  image-translation-integration.md  kokoro-tts-baseline.md  mic-auto-off-design.md  mvp-turn-taking-design.md  notes-timeline.md  turn-state-machine-next.md  view-modes-session-lifecycle.md  voxcpm-options-redesign-implementation-log.md  voxcpm-options-redesign.md  voxcpm-research-notes.md
docs/archived/: mic-auto-off-design.md  voxcpm-options-redesign-implementation-log.md  voxcpm-options-redesign.md  voxcpm-research-notes.md
static/: index.html  manifest.json  styles.css
static/src/: api-client.js  app.js  els.js  state.js
static/src/domain/: languages.js  (+1 more)
static/themes/: dark.css  light.css  tokens.css
tests/: test_asr_bridge.py  test_asr_pc_export.py  test_live_settings.py  test_tts_bridge.py  test_turn_state_machine.py  test_voice_library.py
(+31 files in other folders)
