[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-translate-tts"
version = "0.1.0"
description = "Mobile-first FastAPI app for turn-based speech translation using ASR, LLM, and TTS pool services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "websockets>=12",
]

[tool.setuptools.packages.find]
include = ["app*"]
