[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-translate-app"
version = "0.1.0"
description = "Mobile-first FastAPI and web app for live speech and image translation using ASR, LLM, TTS, voice-library, and image-translation services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "websockets>=12",
]

[tool.setuptools.packages.find]
include = ["app*"]
